Fixed the black bar not being visible in medium view and over

--- a/src/sass/views/_smallViewUnder.scss
+++ b/src/sass/views/_smallViewUnder.scss
@@ -143,6 +143,10 @@ $gcwu-theme-mb-pnl-bg: #efefef;
 	@include linear-background($smallview-breadcrumb-bar-gradient-start, $smallview-breadcrumb-bar-gradient-end);
 }
 
+#gc-info {
+	display: none;
+}
+
 [dir=rtl] {
 	#mb-pnl {
 		.srch-pnl {
